server: note grouped initial implementation with tests

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -92,6 +92,7 @@
 						{{ cm.main_menu_link('Vulnerabilities', 'storage.vuln_list_route') }}
 						{{ cm.main_menu_link('Vulnerabilities grouped', 'storage.vuln_grouped_route') }}
 						{{ cm.main_menu_link('Notes', 'storage.note_list_route') }}
+						{{ cm.main_menu_link('Notes grouped', 'storage.note_grouped_route') }}
 					{%- elif active_subsystem == 'visuals' -%}
 						{{ cm.main_menu_link('Internals', 'visuals.internals_route') }}
 						{{ cm.main_menu_link('DNS Tree', 'visuals.dnstree_route', crop=1) }}
