--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -20,6 +20,7 @@
 			Sner.dt.column('comment', {'className': 'abutton_annotate_dt forcewrap', 'title': 'cmnt'}),
 			Sner.dt.column_buttons(Sner.storage.hbs.host_controls)
 		],
+		'order': [[2, 'asc']],
 		'select': JSON.parse(sessionStorage.getItem('dt_toolboxes_visible')) ? {'style': 'multi', 'selector': 'td:first-child'} : false,
 		'drawCallback': function (settings) {
 			Sner.dt.ajax_options['drawCallback'].call(this, settings); // call parent
