--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -259,6 +259,8 @@
 					Sner.dt.column('host_id', {'visible': false}),
 					Sner.dt.column('host_address', {'visible': false}),
 					Sner.dt.column('host_hostname', {'visible': false}),
+					Sner.dt.column('service_proto', {'visible': false}),
+					Sner.dt.column('service_port', {'visible': false}),
 					Sner.dt.column('service', {
 						'className': 'service_endpoint_dropdown',
 						'render': function(data, type, row, meta) {
@@ -275,7 +277,7 @@
 					Sner.dt.column('comment', {'className': 'abutton_annotate_dt forcewrap', 'title': 'cmnt'}),
 					Sner.dt.column_buttons(Sner.storage.hbs.note_controls)
 				],
-				'order': [[5, 'asc']],
+				'order': [[7, 'asc']],
 				'select': JSON.parse(sessionStorage.getItem('dt_toolboxes_visible')) ? {'style': 'multi', 'selector': 'td:first-child'} : false,
 				'drawCallback': function (settings) {
 					Sner.dt.ajax_options['drawCallback'].call(this, settings); // call parent
