server: sner.css fix datatables select column rendering bug for datatables >1.10.20

--- a/sner/server/static/sner/sner.css
+++ b/sner/server/static/sner/sner.css
@@ -48,6 +48,9 @@ td.dt-nowrap {
 	white-space: nowrap;
 }
 
+table.dataTable.table-sm > thead > tr > th {
+  padding-right: 20px;
+}
 
 /* other */
 .striked {
