server: add heatmap/readymap metrics
https://github.com/bodik/sner4/issues/38

--- a/sner/server/templates/visuals/internals.html
+++ b/sner/server/templates/visuals/internals.html
@@ -6,6 +6,9 @@
 {% block content %}
 {% call cm.heading(['Visuals', 'Internals']) %}{% endcall %}
 
+<h2>Metrics</h2>
+<pre><code class="hljs">{{ metrics }}</code></pre>
+
 <h2>Exclusions</h2>
 <pre><code class="hljs language-yaml">{{ config['SNER_EXCLUSIONS'] | yaml_dump }}</code></pre>
 
