server: heatmap_check to internals

--- a/sner/server/templates/visuals/internals.html
+++ b/sner/server/templates/visuals/internals.html
@@ -6,6 +6,9 @@
 {% block content %}
 {% call cm.heading(['Visuals', 'Internals']) %}{% endcall %}
 
+<h2>Heatmap check</h2>
+<pre><code class="hljs language-yaml">heatmap_consistent: {{ heatmap_check }}</code></pre>
+
 <h2>Metrics</h2>
 <pre><code class="hljs">{{ metrics }}</code></pre>
 
