--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="sner version {{ sner_version }}"/>
 	<meta name="csrf-token" content="{{ csrf_token() }}">
 	<title>{% block title %}{% endblock %} - sner4</title>
+	<link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
 
 
 	<script type="text/javascript" src="{{ url_for('static', filename='jquery/jquery-3.7.0.min.js') }}"></script>
