server: basic vulnsearch view (also fix store vulnsearch.data as true json, but keep sending string to elastic)

--- a/sner/server/templates/storage/vulnsearch/list.html
+++ b/sner/server/templates/storage/vulnsearch/list.html
@@ -31,6 +31,7 @@
 			Sner.dt.column('attack_vector'),
 			Sner.dt.column('cpe_full'),
 			Sner.dt.column('name'),
+			Sner.dt.column_buttons(Sner.storage.hbs.vulnsearch_controls),
 		],
 		'order': [[2, 'desc']]
 	};
