--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -373,6 +373,7 @@
 					Sner.dt.column('attack_vector'),
 					Sner.dt.column('cpe_full'),
 					Sner.dt.column('name'),
+					Sner.dt.column_buttons(Sner.storage.hbs.vulnsearch_controls),
 				],
 				'order': [[6, 'asc']],
 				'drawCallback': function (settings) {
