--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -94,7 +94,7 @@
 						{{ cm.main_menu_link('Vulnerabilities grouped', 'storage.vuln_grouped_route') }}
 						{{ cm.main_menu_link('Notes', 'storage.note_list_route') }}
 						{{ cm.main_menu_link('Notes grouped', 'storage.note_grouped_route') }}
-						{{ cm.main_menu_link('VersionInfos', 'storage.versioninfo_list_route') }}
+						{{ cm.main_menu_link('Versioninfos', 'storage.versioninfo_list_route') }}
 						{{ cm.main_menu_link('Vulnsearch', 'storage.vulnsearch_list_route') }}
 					{%- elif active_subsystem == 'visuals' -%}
 						{{ cm.main_menu_link('Internals', 'visuals.internals_route') }}
