--- a/sner/server/templates/storage/vulnsearch/list.html
+++ b/sner/server/templates/storage/vulnsearch/list.html
@@ -56,7 +56,7 @@
 {% endblock %}
 
 {% block content %}
-{% call cm.heading(['Vulnsearch']) %}
+{% call cm.heading(['Vulnsearch (pre-computed)']) %}
 	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
 	</div>
@@ -90,8 +90,6 @@
 	</div>
 	{{ cm.filter_form() }}
 </div>
-
-<div class="alert alert-warning" role="alert">Pre-computed view, host links might be incorrect.</div>
 
 <table id="vulnsearch_list_table" class="table table-hover table-sm" width="100%"></table>
 {% endblock %}
